--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,16 @@
+# IGNORE
+
+# ------------------------------
+
+# FOLDERS
 __pycache__/
 logs/
 
+# ENV RELATED
 *.py[cod]
 *.pyo
 .env
+
+# TXT and LOGS
+*.log
+*.txt
