file name fixes, readme info updated

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
 # ============================
-# Python / NST Project Gitignore
+# Network Explorer (.gitignore)
 # ============================
 
 # --- Python build & cache ---
